--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div style="max-width: 500px;" class="mx-auto p-3 bg-light">
                 <div class="row">
                     <div class="col-12 mb-3">
-                        <h2 class="border-bottom">Earning Estimate Calculator</h2>
+                        <h2 class="border-bottom">Estimate Calculator</h2>
                     </div>
                     <div class="col-12 mb-3">
                         <label for="amount">Deposit Amount:</label>
