--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </head>
 <body style="background-color: #DFE8EA;">
+    <!--Nav bar-->
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Estimate calulator</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="calculation.html">Trading Estimation</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="container">
         <div class="w-100 my-3">
             <div style="max-width: 500px;" class="mx-auto p-3 bg-light">
@@ -28,6 +41,7 @@
                     </div>
                     <div class="col-12">
                         <button id="calculate" class="btn btn-primary">Calculate</button>
+                        <input type="reset" class="btn btn-outline-danger" value="Reset Button" onclick="window.location.reload();">
                     </div>
                 </div>
             </div>
