created dividen html

--- a/dividen.html
+++ b/dividen.html
@@ -16,13 +16,13 @@
         <div class="container-fluid">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Estimate calulator</a>
+                    <a class="nav-link" href="index.html">Estimate calulator</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="calculation.html">Trading Estimation</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="dividen.html">Dividen Calculation</a>
+                    <a class="nav-link active" href="dividen.html">Dividen Calculation</a>
                 </li>
             </ul>
         </div>
@@ -32,7 +32,11 @@
             <div style="max-width: 500px;" class="mx-auto p-3 bg-light">
                 <div class="row">
                     <div class="col-12 mb-3">
-                        <h2 class="border-bottom">Estimate Calculator</h2>
+                        <h2 class="border-bottom">Dividen Calculation</h2>
+                    </div>
+                    <div class="col-12 mb-3">
+                        <label for="current-amount">Current Amount:</label>
+                        <input type="number" id="current-amount" class="form-control" name="current-amount" placeholder="Current Amount" />
                     </div>
                     <div class="col-12 mb-3">
                         <label for="amount">Deposit Amount:</label>
