--- a/calculation.html
+++ b/calculation.html
@@ -65,6 +65,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="calculation.html">Trading Estimation</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="dividen.html">Dividen Calculation</a>
+                </li>
             </ul>
         </div>
     </nav>
