add mention message

--- a/dividen.html
+++ b/dividen.html
@@ -28,6 +28,9 @@
         </div>
     </nav>
     <div class="container">
+        <div class="alert alert-danger" role="alert">
+            In Developing...Currently not available...
+        </div>
         <div class="w-100 my-3">
             <div style="max-width: 500px;" class="mx-auto p-3 bg-light">
                 <div class="row">
